--- a/JS_Udemy/forms_exercices/index.html
+++ b/JS_Udemy/forms_exercices/index.html
@@ -25,14 +25,14 @@
           <!-- <select id="option" class="mt-8 sm:leading-relaxed sm:text-xl">
             
           </select> -->
-          <label class="select" for="options" >
+          <label class="select" for="options">
             <select id="options" required="required" class="mt-8">
-              
               <option value="opt1">City</option>
               <option value="opt2">Montain</option>
               <option value="opt3">Beach</option>
-            </select>
-            <a
+            </select></label
+          >
+          <a
             class="m-10 relative inline-block group focus:outline-none focus:ring"
             href="#"
             id="clickMe"
@@ -48,6 +48,57 @@
             </span>
           </a>
           <label id="result"></label>
+          <br />
+          <input type="radio" name="gender" value="Male" />Male
+          <input type="radio" name="gender" value="Female" />Female
+          <input type="radio" name="gender" value="I'd rather not inform" />I'd
+          rather not inform
+          <br />
+          <a
+            class="m-10 relative inline-block group focus:outline-none focus:ring"
+            href="#"
+            id="showMe"
+          >
+            <span
+              class="absolute inset-0 transition-transform translate-x-1.5 translate-y-1.5 bg-yellow-300 group-hover:translate-y-0 group-hover:translate-x-0"
+            ></span>
+
+            <span
+              class="relative inline-block px-8 py-3 text-sm font-bold tracking-widest text-black uppercase border-2 border-current group-active:text-opacity-75"
+            >
+              Show Me
+            </span>
+          </a>
+          <label id="radioResult"></label>
+          <br />
+          <input
+            type="checkbox"
+            name="interest"
+            value="Front-End Development"
+          />Front-End Development
+          <input
+            type="checkbox"
+            name="interest"
+            value="Back-End Development"
+          />Back-End Development
+          <input type="checkbox" name="interest" value="Design" />Design
+          <br />
+          <a
+            class="m-10 relative inline-block group focus:outline-none focus:ring"
+            href="#"
+            id="show"
+          >
+            <span
+              class="absolute inset-0 transition-transform translate-x-1.5 translate-y-1.5 bg-yellow-300 group-hover:translate-y-0 group-hover:translate-x-0"
+            ></span>
+
+            <span
+              class="relative inline-block px-8 py-3 text-sm font-bold tracking-widest text-black uppercase border-2 border-current group-active:text-opacity-75"
+            >
+              Check & Click here
+            </span>
+          </a>
+          <label id="checkResult"></label>
         </div>
       </div>
     </section>
