--- a/JS_Udemy/webProject/index.html
+++ b/JS_Udemy/webProject/index.html
@@ -35,7 +35,9 @@
   <body>
     <header class="sticky inset-x-0 top-0 z-50 bg-gray-900">
       <div class="max-w-screen-xl px-6 mx-auto sm:px-8 lg:px-28">
-        <div class="flex items-center justify-between h-16 px-10 py-12">
+        <div
+          class="flex items-center justify-between h-16 lg:pl-0 lg:px-32 sm:px-5 py-12"
+        >
           <div class="flex-1 md:flex md:items-center md:gap-12">
             <a
               class="block text-lg text-white transition hover:text-white/75"
@@ -48,91 +50,159 @@
           <div class="sticky md:flex md:items-center md:gap-12">
             <!-- nav starts here -->
 
-            <nav class="relative px-4 py-4 flex justify-between items-center ">
-              
+            <nav class="relative px-4 py-4 flex justify-between items-center">
               <div class="lg:hidden">
-                <button data-collapse-toggle="navbar-cta" type="button" class="navbar-burger inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-cta" aria-expanded="false">
+                <button
+                  data-collapse-toggle="navbar-cta"
+                  type="button"
+                  class="navbar-burger inline-flex items-center p-2 text-sm text-gray-500 rounded-lg hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                  aria-controls="navbar-cta"
+                  aria-expanded="false"
+                >
                   <span class="sr-only">Open main menu</span>
-                  <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
-              </button>
-                
+                  <svg
+                    class="w-6 h-6"
+                    aria-hidden="true"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                      clip-rule="evenodd"
+                    ></path>
+                  </svg>
+                </button>
               </div>
-              <ul class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
-                <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#">Home</a></li>
+              <ul
+                class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6"
+              >
+                <li>
+                  <a class="text-sm text-blue-600 font-bold" href="#about"
+                    >About</a
+                  >
+                </li>
                 <li class="text-gray-300">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    stroke="currentColor"
+                    class="w-4 h-4 current-fill"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"
+                    />
                   </svg>
                 </li>
-                <li><a class="text-sm text-blue-600 font-bold" href="#">About Us</a></li>
+                <li>
+                  <a
+                    class="text-sm text-gray-400 hover:text-gray-500"
+                    href="#services"
+                    >Services</a
+                  >
+                </li>
                 <li class="text-gray-300">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    stroke="currentColor"
+                    class="w-4 h-4 current-fill"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"
+                    />
                   </svg>
                 </li>
-                <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#">Services</a></li>
-                <li class="text-gray-300">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
-                  </svg>
+
+                <li>
+                  <a
+                    class="text-sm text-gray-400 hover:text-gray-500"
+                    href="#contact"
+                    >Contact</a
+                  >
                 </li>
-                <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#">Pricing</a></li>
-                <li class="text-gray-300">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
-                  </svg>
-                </li>
-                <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#">Contact</a></li>
               </ul>
-              <a class="hidden lg:inline-block lg:ml-auto lg:mr-3 py-2 px-6 bg-gray-50 hover:bg-gray-100 text-sm text-gray-900 font-bold  rounded-xl transition duration-200" href="#">Sign In</a>
-              <a class="hidden lg:inline-block py-2 px-6 bg-blue-500 hover:bg-blue-600 text-sm text-white font-bold rounded-xl transition duration-200" href="#">Sign up</a>
             </nav>
+            <!-- nav ends here -->
+            <!-- mobile nav -->
             <div class="navbar-menu relative z-50 hidden">
-              <div class="navbar-backdrop fixed inset-0 bg-gray-800 opacity-25"></div>
-              <nav class="fixed top-0 left-0 bottom-0 flex flex-col w-5/6 max-w-sm py-6 px-6 bg-white border-r overflow-y-auto">
+              <div
+                class="navbar-backdrop fixed inset-0 bg-gray-800 opacity-25"
+              ></div>
+              <nav
+                class="fixed top-0 left-0 bottom-0 flex flex-col w-5/6 max-w-sm py-6 px-6 bg-white border-r overflow-y-auto"
+              >
                 <div class="flex items-center mb-8">
-                  <a class="mr-auto text-3xl font-bold leading-none" href="#">
-                    <svg class="h-12" alt="logo" viewBox="0 0 100 100">
-                      <path d="M100 34.2c-.4-2.6-3.3-4-5.3-5.3-3.6-2.4-7.1-4.7-10.7-7.1-8.5-5.7-17.1-11.4-25.6-17.1-2-1.3-4-2.7-6-4-1.4-1-3.3-1-4.8 0-5.7 3.8-11.5 7.7-17.2 11.5L5.2 29C3 30.4.1 31.8 0 34.8c-.1 3.3 0 6.7 0 10v16c0 2.9-.6 6.3 2.1 8.1 6.4 4.4 12.9 8.6 19.4 12.9 8 5.3 16 10.7 24 16 2.2 1.5 4.4 3.1 7.1 1.3 2.3-1.5 4.5-3 6.8-4.5 8.9-5.9 17.8-11.9 26.7-17.8l9.9-6.6c.6-.4 1.3-.8 1.9-1.3 1.4-1 2-2.4 2-4.1V37.3c.1-1.1.2-2.1.1-3.1 0-.1 0 .2 0 0zM54.3 12.3L88 34.8 73 44.9 54.3 32.4V12.3zm-8.6 0v20L27.1 44.8 12 34.8l33.7-22.5zM8.6 42.8L19.3 50 8.6 57.2V42.8zm37.1 44.9L12 65.2l15-10.1 18.6 12.5v20.1zM50 60.2L34.8 50 50 39.8 65.2 50 50 60.2zm4.3 27.5v-20l18.6-12.5 15 10.1-33.6 22.4zm37.1-30.5L80.7 50l10.8-7.2-.1 14.4z"></path>
-                    </svg>
-                  </a>
+                  <div class="flex-1 md:flex md:items-center md:gap-12">
+                    <a
+                      class="block text-lg text-white transition hover:text-white/75"
+                      href=""
+                    >
+                      <h1 class="text-gray-600">
+                        <span class="square"> &nbsp;</span>WeDesign
+                      </h1>
+                    </a>
+                  </div>
                   <button class="navbar-close">
-                    <svg class="h-6 w-6 text-gray-400 cursor-pointer hover:text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                    <svg
+                      class="h-6 w-6 text-gray-400 cursor-pointer hover:text-gray-500"
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M6 18L18 6M6 6l12 12"
+                      ></path>
                     </svg>
                   </button>
                 </div>
                 <div>
                   <ul>
                     <li class="mb-1">
-                      <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Home</a>
+                      <a
+                        class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded"
+                        href="#about"
+                        >About</a
+                      >
                     </li>
                     <li class="mb-1">
-                      <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">About Us</a>
+                      <a
+                        class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded"
+                        href="#services"
+                        >Services</a
+                      >
                     </li>
+
                     <li class="mb-1">
-                      <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Services</a>
-                    </li>
-                    <li class="mb-1">
-                      <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Pricing</a>
-                    </li>
-                    <li class="mb-1">
-                      <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Contact</a>
+                      <a
+                        class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded"
+                        href="#contact"
+                        >Contact</a
+                      >
                     </li>
                   </ul>
                 </div>
                 <div class="mt-auto">
-                  <div class="pt-6">
-                    <a class="block px-4 py-3 mb-3 leading-loose text-xs text-center font-semibold leading-none bg-gray-50 hover:bg-gray-100 rounded-xl" href="#">Sign in</a>
-                    <a class="block px-4 py-3 mb-2 leading-loose text-xs text-center text-white font-semibold bg-blue-600 hover:bg-blue-700  rounded-xl" href="#">Sign Up</a>
-                  </div>
                   <p class="my-4 text-xs text-center text-gray-400">
                     <span>Copyright © 2021</span>
                   </p>
                 </div>
               </nav>
-
-            <!-- nav ends here -->
+              <!--mobile nav ends here -->
+            </div>
           </div>
         </div>
       </div>
@@ -148,44 +218,46 @@
       <div
         class="relative justify-center max-w-screen-xl mx-auto lg:h-screen lg:items-center lg:flex"
       >
-        <div class="max-w-xl h-[15rem] text-center sm:text-center">
+        <div
+          class="max-w-xl h-[15rem] text-center md:text-center sm:text-center"
+        >
           <h1 class="text-3xl text-white sm:text-5xl">We are WeDesign!</h1>
 
-          <p class="max-w-lg mt-4 text-white sm:leading-relaxed sm:text-xl">
+          <p id="about" class="max-w-lg mt-4 text-white sm:text-xl">
             You dream, we design and build.
           </p>
         </div>
       </div>
     </section>
-
-    <section id="about">
+    <!-- section about -->
+    <section>
       <div class="flex flex-col align-center justify-center mb-5">
         <h1 class="font-bold text-center text-2xl mb-10">About Us</h1>
       </div>
-      <div class="flex flex-col justify-center align-center px-14">
+      <div class="tab-box flex flex-col justify-center align-center px-14">
         <ul class="flex text-center border-b border-gray-200">
           <li class="flex-1">
-            <a
-              class="relative block p-4 text-sm font-medium text-white bg-gray-800"
-              href=""
+            <div
+              class="single-tab relative block p-4 text-sm font-medium text-white bg-gray-800"
             >
-              <span
-                class="absolute inset-x-0 w-full h-px bg-gray-800 -bottom-px"
-              ></span>
               Mission
-            </a>
+            </div>
           </li>
 
           <li class="flex-1">
-            <a class="block p-4 text-sm font-medium text-gray-500" href="">
+            <div
+              class="single-tab block p-4 text-sm font-medium text-white text-gray-800"
+            >
               Vision
-            </a>
+            </div>
           </li>
 
           <li class="flex-1">
-            <a class="block p-4 text-sm font-medium text-gray-500" href="">
+            <div
+              class="single-tab block p-4 text-sm font-medium text-white text-gray-800"
+            >
               Values
-            </a>
+            </div>
           </li>
         </ul>
         <div class="w-full bg-gray-800 flex justify-center align-center">
@@ -559,3 +631,7 @@
     </section>
   </body>
 </html>
+
+<!-- <span
+                class="absolute inset-x-0 w-full h-px bg-gray-800 -bottom-px"
+              ></span> -->
