--- a/JS_Udemy/webProject/index.html
+++ b/JS_Udemy/webProject/index.html
@@ -303,9 +303,10 @@
                 <p
                   class="text-md text-white font-medium text-center lg:px-8 xs:px-8 lg:my-8 md:my-16 sm:my-16 xs:my-16 my-16"
                 >
-                  Web design. Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit. Praesent finibus tincidunt sem non sodales. Nunc et quam
-                  in magna vehicula sollicitudin. Aliquam erat volutpat.
+                  <span class="text-yellow-300 text-xl"> Web design. </span
+                  >Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Praesent finibus tincidunt sem non sodales. Nunc et quam in
+                  magna vehicula sollicitudin. Aliquam erat volutpat.
                 </p>
               </li>
 
